Fix logo z-index so it becomes clickable again

--- a/css/main.sass
+++ b/css/main.sass
@@ -48,7 +48,7 @@ $logosize: 85px
   height: $logosize/3.45
   background-color: #fff
   overflow: hidden
-  z-index: -1
+  z-index: 0
   @media only screen and (max-width: 900px)
     display: none !important
   .logo
